--- a/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/ResultsForm.form
@@ -16,14 +16,14 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="bevel-raised"/>
         <children>
           <component id="dfd9" class="javax.swing.JLabel" binding="lastProcessedImage">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="145" height="145"/>
-                <preferred-size width="145" height="145"/>
-                <maximum-size width="145" height="145"/>
+                <minimum-size width="290" height="290"/>
+                <preferred-size width="290" height="290"/>
+                <maximum-size width="290" height="290"/>
               </grid>
             </constraints>
             <properties>
