[Feature] PSNR/MSE e2e

--- a/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
@@ -84,6 +84,7 @@
                 </constraints>
                 <properties>
                   <enabled value="false"/>
+                  <visible value="false"/>
                 </properties>
                 <border type="none"/>
                 <children>
