--- a/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
+++ b/ip-view/src/main/java/com/gebond/ip/view/MainForm.form
@@ -84,7 +84,7 @@
                 </constraints>
                 <properties>
                   <enabled value="true"/>
-                  <visible value="true"/>
+                  <visible value="false"/>
                 </properties>
                 <border type="none"/>
                 <children>
